--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       justify-content: center;
       align-items: center;
       background-color: #f8f8f8;
-      background-image: url('https://s-media-cache-ak0.pinimg.com/originals/0b/dc/4e/0bdc4e3db983b1ae12a20f0f6f5dd2be.jpg');
+      background-image: url('https://img.freepik.com/free-photo/birthday-party-homemade-cake_23-2147666202.jpg');
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
@@ -55,7 +55,7 @@
   </div>
 
   <script>
-    const message = "🎂 Happy birthday, Manti Madam! 🎂 Wishing you a day as beautiful as your smile. 🎂 May each moment be filled with love, laughter, and unforgettable memories. 🎂 You deserve all the happiness in the world today and every day. 🎂 Cheers to another amazing year ahead with you by my side.";
+    const message = "🎂 Happy birthday, Manti Madam! 🎂 Wishing you a day as beautiful as your smile. 🎂 May each moment be filled with love, laughter, and unforgettable memories. 🎂 You deserve all the happiness in the world today and every day. 🎂 Cheers to another amazing year ahead by my side.";
     const messageContainer = document.getElementById("message");
     const timerContainer = document.getElementById("timer");
     const celebrationLine = document.getElementById("celebration-line")
